--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,35 +93,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_by_ids = {}\n",
     "expected_res = {}\n",
+    "origs = {}\n",
     "for record in data_list:\n",
     "    if record['rec_common_id'] not in data_by_ids:\n",
     "        data_by_ids[record['rec_common_id']] = []\n",
     "        expected_res[record['rec_common_id']] = set()\n",
     "    data_by_ids[record['rec_common_id']].append(record)\n",
-    "    expected_res[record['rec_common_id']].add(record['rec_id'])"
+    "    expected_res[record['rec_common_id']].add(record['rec_id'])\n",
+    "    if 'org' in record['rec_id']:\n",
+    "        origs[record['rec_id']] = record"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from distances.levenshtein import levenstein_similarity\n",
+    "from distances.levenshtein import levenstein_similarity, levenshtein_distance_memopt\n",
     "from distances.jaro import jaro_winkler_similarity\n",
-    "from distances.damerau_levenstein import damerau_levenshtein_similarity\n",
+    "from distances.damerau_levenstein import damerau_levenshtein_similarity, damerau_levenshtein_distance_memopt\n",
     "from distances.jaccard import jaccard_similarity_str"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,34 +150,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "main_rec_id: rec-148-dup-2, td_rec_id: rec-148-dup-0, similarity: 0.6753246753246753\n",
-      "main_rec_id: rec-148-dup-2, td_rec_id: rec-148-org, similarity: 0.6854256854256854\n",
-      "main_rec_id: rec-148-dup-2, td_rec_id: rec-148-dup-1, similarity: 0.613997113997114\n",
-      "main_rec_id: rec-148-dup-2, td_rec_id: rec-148-dup-3, similarity: 0.608044733044733\n",
-      "main_rec_id: rec-148-dup-2, td_rec_id: rec-100-dup-3, similarity: 0.188973063973064\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test_data = data_by_ids['rec-148']\n",
-    "main_rec = test_data[-1]\n",
-    "test_data = test_data[:-1]\n",
-    "test_data.append(data_by_ids['rec-100'][0])\n",
-    "for td in test_data:\n",
-    "  sim = get_lev_sim(main_rec, td)\n",
-    "  print(f'main_rec_id: {main_rec[\"rec_id\"]}, td_rec_id: {td[\"rec_id\"]}, similarity: {sim}')"
+    "# test_data = data_by_ids['rec-148']\n",
+    "# main_rec = test_data[-1]\n",
+    "# test_data = test_data[:-1]\n",
+    "# test_data.append(data_by_ids['rec-100'][0])\n",
+    "# for td in test_data:\n",
+    "#   sim = get_lev_sim(main_rec, td)\n",
+    "#   print(f'main_rec_id: {main_rec[\"rec_id\"]}, td_rec_id: {td[\"rec_id\"]}, similarity: {sim}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -237,10 +228,10 @@
      "output_type": "stream",
      "text": [
       "LEVENSTEIN\n",
-      "tp: 429, fp: 0, fn: 122\n",
+      "tp: 464, fp: 0, fn: 77\n",
       "precision: 1.0\n",
-      "recall: 0.778584392014519\n",
-      "f1: 0.8755102040816326\n"
+      "recall: 0.8576709796672828\n",
+      "f1: 0.9233830845771144\n"
      ]
     }
    ],
@@ -257,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -265,10 +256,10 @@
      "output_type": "stream",
      "text": [
       "JARO\n",
-      "tp: 469, fp: 0, fn: 82\n",
+      "tp: 468, fp: 0, fn: 73\n",
       "precision: 1.0\n",
-      "recall: 0.8511796733212341\n",
-      "f1: 0.919607843137255\n"
+      "recall: 0.8650646950092421\n",
+      "f1: 0.9276511397423192\n"
      ]
     }
    ],
@@ -285,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -293,10 +284,10 @@
      "output_type": "stream",
      "text": [
       "DAMERAU LEVENSTEIN\n",
-      "tp: 433, fp: 0, fn: 118\n",
+      "tp: 469, fp: 0, fn: 72\n",
       "precision: 1.0\n",
-      "recall: 0.7858439201451906\n",
-      "f1: 0.8800813008130082\n"
+      "recall: 0.866913123844732\n",
+      "f1: 0.9287128712871286\n"
      ]
     }
    ],
@@ -313,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -321,10 +312,10 @@
      "output_type": "stream",
      "text": [
       "JACCARD\n",
-      "tp: 435, fp: 0, fn: 116\n",
+      "tp: 477, fp: 0, fn: 64\n",
       "precision: 1.0\n",
-      "recall: 0.7894736842105263\n",
-      "f1: 0.8823529411764706\n"
+      "recall: 0.8817005545286506\n",
+      "f1: 0.93713163064833\n"
      ]
     }
    ],
@@ -341,20 +332,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "kroiakaeschpovunmolak -> 5915477668\n",
-      "kroiagaeschbofumnalak -> 5915477668\n",
-      "kroiakaeschpovunmolak -> 5915477668\n",
-      "kroiagaeschbofumnalak -> 5915477668\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dcs import dcs_plus_plus\n",
     "from dm_soundex import encode"
@@ -362,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,19 +363,64 @@
     "  # print(encode(r['surname'], max_length=10, zero_pad=True))\n",
     "  return s\n",
     "def is_duplicate(r1: Dict[Hashable, Any], r2: Dict[Hashable, Any]) -> bool:\n",
-    "  return get_jaro_sim(r1, r2) > 0.85"
+    "  return get_jaccard_sim(r1, r2) > 0.85"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def res_stats(res: List[Tuple[Dict[Hashable, Any], Dict[Hashable, Any]]], expected_res) -> None:\n",
+    "  tp = 0\n",
+    "  fp = 0\n",
+    "  fn = 0\n",
+    "  res_by_ids = {}\n",
+    "  for (a, b) in res:\n",
+    "    a_id = a['rec_id']\n",
+    "    b_id = b['rec_id']\n",
+    "    if a_id == b_id:\n",
+    "      # print(f'ERROR: {a_id}, {b_id}')\n",
+    "      continue\n",
+    "    a_key = get_key(a_id)\n",
+    "    b_key = get_key(b_id)\n",
+    "    if a_key != b_key:\n",
+    "      # print(f'ERROR: {a_id}, {b_id}, {sim}')\n",
+    "      fp += 1\n",
+    "      continue\n",
+    "    if a_key not in res_by_ids:\n",
+    "      res_by_ids[a_key] = set()\n",
+    "    res_by_ids[a_key].add(a_id)\n",
+    "    res_by_ids[a_key].add(b_id)\n",
+    "  for key in expected_res:\n",
+    "    if key not in res_by_ids:\n",
+    "      if len(expected_res[key]) > 1:\n",
+    "        # print(f'ERROR: not found {key}')\n",
+    "        fn += len(expected_res[key])\n",
+    "      continue\n",
+    "    # if len(expected_res[key]) != len(res_by_ids[key]):\n",
+    "    #   print(f'ERROR: not full {key}')\n",
+    "    fn += len(expected_res[key]) - len(res_by_ids[key])\n",
+    "    tp += len(res_by_ids[key])\n",
+    "  print(f'tp: {tp}, fp: {fp}, fn: {fn}')\n",
+    "  precision = tp / (tp + fp)\n",
+    "  recall = tp / (tp + fn)\n",
+    "  print(f'precision: {precision}')\n",
+    "  print(f'recall: {recall}')\n",
+    "  print(f'f1: {2 * precision * recall / (precision + recall)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['c5e99a60-c3a8-48e0-a14b-94992d2aab14', '2c5e98be-5122-4e58-9e46-86c48ef302b3', 'b2c91609-4fa8-458e-9cb3-944063fa2e50', 'a2d32b94-24cb-4e20-8717-a6a7a62dcd9c', '6f0ddfec-ac6f-4ae0-9c94-cbd08ed0ae53', '72aae635-6f85-4220-8ad9-6a527f6ddec5', '412605f3-680a-41a3-8234-8d4cba0747e8', '738fb943-7f2b-4b64-809d-85a6f42a4b14', '8a35c9eb-f29d-4443-97c6-b6016cf91eb2', '39409a63-e99e-49bf-9b86-43c002c30557']\n"
+      "['5bad66a9-849a-4432-b691-c435b78114e4', 'dbb64336-14fe-4d2f-a56d-92143330e5ab', '8add3567-81c1-472b-ad8e-149c8a4072fe', 'acb86e89-71b2-4a06-8e6a-b7d00c7f74bd', '59353a59-b53b-4a50-a8c5-503b95d57e9a', 'ad85e53f-e2ec-426e-bef8-66df721112f3', 'ea24d742-1044-4ff6-9fd7-bab55aebada6', '2c13bc07-680e-444c-ab82-067f4c38e1f4', 'ee46e3e2-3a29-4006-a3be-47bcd87ed0c0', '1c728458-ede3-4323-a3e8-850c2c264f7b']\n"
      ]
     }
    ],
@@ -405,57 +430,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tp: 440, fp: 0, fn: 111\n",
+      "tp: 405, fp: 0, fn: 136\n",
       "precision: 1.0\n",
-      "recall: 0.7985480943738656\n",
-      "f1: 0.887991927346115\n"
+      "recall: 0.7486136783733827\n",
+      "f1: 0.8562367864693446\n"
      ]
     }
    ],
    "source": [
-    "tp = 0\n",
-    "fp = 0\n",
-    "fn = 0\n",
-    "res_by_ids = {}\n",
-    "for (a, b) in res:\n",
-    "  a_id = a['rec_id']\n",
-    "  b_id = b['rec_id']\n",
-    "  if a_id == b_id:\n",
-    "    print(f'ERROR: {a_id}, {b_id}')\n",
-    "    continue\n",
-    "  a_key = get_key(a_id)\n",
-    "  b_key = get_key(b_id)\n",
-    "  if a_key != b_key:\n",
-    "    # print(f'ERROR: {a_id}, {b_id}, {sim}')\n",
-    "    fp += 1\n",
-    "    continue\n",
-    "  if a_key not in res_by_ids:\n",
-    "    res_by_ids[a_key] = set()\n",
-    "  res_by_ids[a_key].add(a_id)\n",
-    "  res_by_ids[a_key].add(b_id)\n",
-    "for key in expected_res:\n",
-    "  if key not in res_by_ids:\n",
-    "    if len(expected_res[key]) > 1:\n",
-    "      # print(f'ERROR: not found {key}')\n",
-    "      fn += len(expected_res[key])\n",
-    "    continue\n",
-    "  # if len(expected_res[key]) != len(res_by_ids[key]):\n",
-    "  #   print(f'ERROR: not full {key}')\n",
-    "  fn += len(expected_res[key]) - len(res_by_ids[key])\n",
-    "  tp += len(res_by_ids[key])\n",
-    "print(f'tp: {tp}, fp: {fp}, fn: {fn}')\n",
-    "precision = tp / (tp + fp)\n",
-    "recall = tp / (tp + fn)\n",
-    "print(f'precision: {precision}')\n",
-    "print(f'recall: {recall}')\n",
-    "print(f'f1: {2 * precision * recall / (precision + recall)}')"
+    "res_stats(res, expected_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_lev_dist(a: Dict[Hashable, Any], b: Dict[Hashable, Any]) -> int:\n",
+    "  a_s = ''\n",
+    "  b_s = ''\n",
+    "  for k in column_names:\n",
+    "    if a[k] is not None and isinstance(a[k], str) and a[k] != '' and b[k] is not None and isinstance(b[k], str) and b[k] != '':\n",
+    "      a_s += a[k]\n",
+    "      b_s += b[k]\n",
+    "  return damerau_levenshtein_distance_memopt(a_s, b_s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bk_tree import BKTree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bkt = BKTree(get_lev_dist)\n",
+    "for r in data_list:\n",
+    "  bkt.insert(r)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res: List[Tuple[Dict[Hashable, Any], Dict[Hashable, Any]]] = []\n",
+    "qres = []\n",
+    "for org in origs.values():\n",
+    "  q_res = bkt.query(org, 15)\n",
+    "  for (_,r) in q_res:\n",
+    "    if r['rec_id'] != org['rec_id']:\n",
+    "      res.append((org, r))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tp: 513, fp: 7, fn: 28\n",
+      "precision: 0.9865384615384616\n",
+      "recall: 0.9482439926062847\n",
+      "f1: 0.9670122525918945\n"
+     ]
+    }
+   ],
+   "source": [
+    "res_stats(res, expected_res)"
    ]
   }
  ],
