--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -228,10 +228,10 @@
      "output_type": "stream",
      "text": [
       "LEVENSTEIN\n",
-      "tp: 464, fp: 0, fn: 77\n",
+      "tp: 452, fp: 0, fn: 85\n",
       "precision: 1.0\n",
-      "recall: 0.8576709796672828\n",
-      "f1: 0.9233830845771144\n"
+      "recall: 0.8417132216014898\n",
+      "f1: 0.9140546006066734\n"
      ]
     }
    ],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -256,10 +256,10 @@
      "output_type": "stream",
      "text": [
       "JARO\n",
-      "tp: 468, fp: 0, fn: 73\n",
+      "tp: 473, fp: 0, fn: 64\n",
       "precision: 1.0\n",
-      "recall: 0.8650646950092421\n",
-      "f1: 0.9276511397423192\n"
+      "recall: 0.8808193668528864\n",
+      "f1: 0.9366336633663366\n"
      ]
     }
    ],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -284,10 +284,10 @@
      "output_type": "stream",
      "text": [
       "DAMERAU LEVENSTEIN\n",
-      "tp: 469, fp: 0, fn: 72\n",
+      "tp: 459, fp: 0, fn: 78\n",
       "precision: 1.0\n",
-      "recall: 0.866913123844732\n",
-      "f1: 0.9287128712871286\n"
+      "recall: 0.8547486033519553\n",
+      "f1: 0.9216867469879518\n"
      ]
     }
    ],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -312,10 +312,10 @@
      "output_type": "stream",
      "text": [
       "JACCARD\n",
-      "tp: 477, fp: 0, fn: 64\n",
+      "tp: 460, fp: 0, fn: 77\n",
       "precision: 1.0\n",
-      "recall: 0.8817005545286506\n",
-      "f1: 0.93713163064833\n"
+      "recall: 0.8566108007448789\n",
+      "f1: 0.9227683049147443\n"
      ]
     }
    ],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,34 +413,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['5bad66a9-849a-4432-b691-c435b78114e4', 'dbb64336-14fe-4d2f-a56d-92143330e5ab', '8add3567-81c1-472b-ad8e-149c8a4072fe', 'acb86e89-71b2-4a06-8e6a-b7d00c7f74bd', '59353a59-b53b-4a50-a8c5-503b95d57e9a', 'ad85e53f-e2ec-426e-bef8-66df721112f3', 'ea24d742-1044-4ff6-9fd7-bab55aebada6', '2c13bc07-680e-444c-ab82-067f4c38e1f4', 'ee46e3e2-3a29-4006-a3be-47bcd87ed0c0', '1c728458-ede3-4323-a3e8-850c2c264f7b']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "res = dcs_plus_plus(data_list, dcs_key, is_duplicate=is_duplicate, w=20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tp: 405, fp: 0, fn: 136\n",
+      "tp: 413, fp: 0, fn: 124\n",
       "precision: 1.0\n",
-      "recall: 0.7486136783733827\n",
-      "f1: 0.8562367864693446\n"
+      "recall: 0.7690875232774674\n",
+      "f1: 0.8694736842105263\n"
      ]
     }
    ],
@@ -450,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,17 +493,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tp: 513, fp: 7, fn: 28\n",
-      "precision: 0.9865384615384616\n",
-      "recall: 0.9482439926062847\n",
-      "f1: 0.9670122525918945\n"
+      "tp: 524, fp: 35, fn: 13\n",
+      "precision: 0.9373881932021467\n",
+      "recall: 0.9757914338919925\n",
+      "f1: 0.9562043795620438\n"
+     ]
+    }
+   ],
+   "source": [
+    "res_stats(res, expected_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bk2 import BKTree as BK2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bk2 = BK2(get_lev_dist)\n",
+    "for r in data_list:\n",
+    "  bk2.insert(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res: List[Tuple[Dict[Hashable, Any], Dict[Hashable, Any]]] = []\n",
+    "for org in origs.values():\n",
+    "  q_res = bkt.query(org, 15)\n",
+    "  for (_,r) in q_res:\n",
+    "    if r['rec_id'] != org['rec_id']:\n",
+    "      res.append((org, r))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tp: 524, fp: 35, fn: 13\n",
+      "precision: 0.9373881932021467\n",
+      "recall: 0.9757914338919925\n",
+      "f1: 0.9562043795620438\n"
      ]
     }
    ],
